# Protosyte

./: .gitignore  ADVANCED_PATTERNS.md  CHANGELOG.md  DEPENDENCY_UPDATES.md  FRAMEWORK_REVIEW.md  LICENSE  Makefile  OPERATIONAL_WORKFLOW.md  PERFORMANCE_TUNING.md  README.md  ROADMAP.md  SECURITY_PROCEDURES.md  mission.yaml.example  topics.json
analysis-rig/: README.md  ai_integration.go  analyzer.go  analyzer_test.go  error_handler.go  error_handler_test.go  go.mod  go.sum  main.go  metrics.go  metrics_test.go  protobuf.go  protobuf_test.go  retriever.go  retriever_test.go
broadcast-engine/: README.md  go.mod  go.sum  main.go  main_test.go  queue.go
docs/: AI_FILTERING.md  AI_FILTERING_NO_MODEL.md  ANALYSIS_VM.md  CLI_COMMANDS.md  CODEBASE_IMPROVEMENTS.md  DATABASE_MANAGEMENT.md  EBPF_IMPLEMENTATION.md  MISSION_YAML_INTEGRATION.md  MODEL_EMBEDDING_GUIDE.md  MODEL_INTEGRATION.md  OLLAMA_INTEGRATION.md  OPERATIONS.md  POST_QUANTUM_CRYPTO.md  VERSION_3_MIGRATION.md
legal-bridge/: README.md  go.mod  main.go
mission-config/: go.mod  mission.go
proto/: protosyte.proto
protosyte-adaptixc2/: README.md  bridge.go  bridge_test.go  go.mod  main.go
protosyte-adaptixc2/extender/: extender.go
protosyte-ai/: README.md  client.go  go.mod  ollama_integration.go
protosyte-seed/: .gitignore  BUILD_REQUIREMENTS.md  Cargo.toml  MODEL_QUICKSTART.md  Makefile  OLLVM_INTEGRATION.md  QUALITY_IMPROVEMENTS.md  README.md  WINDOWS_BUILD_SETUP.md  build.rs  build_obfuscate.rs
protosyte-seed-macos/: Cargo.toml  README.md  build.rs
protosyte-seed-macos/src/: advanced_evasion.rs  buffer.rs  crypto.rs  exfil.rs  hook.rs  injection.rs  lib.rs  obfuscate.rs  privilege_escalation.rs  sip_bypass.rs  stealth.rs
protosyte-seed-macos/src/proto/: mod.rs
protosyte-seed-macros/: Cargo.toml
protosyte-seed-windows/: Cargo.toml  README.md
protosyte-seed-windows/src/: advanced_evasion.rs  buffer.rs  crypto.rs  exfil.rs  hook.rs  hook_inline.rs  injection.rs  lib.rs  obfuscate.rs  privilege_escalation.rs  stealth.rs  tor_detection.rs
protosyte-seed-windows/src/proto/: protosyte.core.v2.rs
protosyte-seed/bpf/: protosyte_hook.bpf.c
protosyte-seed/models/: README.md
protosyte-seed/src/: adaptive_channel.rs  advanced_evasion.rs  ai_filtering.rs  anti_debug.rs  batch_processing.rs  buffer.rs  build_system.rs  call_stack_spoofing.rs  cert_pinning.rs  clipboard_monitor.rs  compression_adaptive.rs  config.rs  config_hot_reload.rs  constants.rs  crypto.rs  database_interception.rs  decoy_traffic.rs  dns_tunnel.rs  domain_fronting.rs  ebpf_hooks.rs  ebpf_process_hiding.rs  error_handling.rs  error_logging.rs  exfil.rs  forward_secrecy.rs  geofencing.rs  heavens_gate.rs  hook.rs  hook_lib.rs  icmp_tunnel.rs  indirect_syscalls.rs  injection.rs  intelligent_hooks.rs  ipc.rs  key_rotation.rs  keylogger.rs  kprobes_hooking.rs  lazy_filtering.rs  lib.rs  logging.rs  (+25 more)
protosyte-seed/src/ipc/: mod.rs  tests.rs
protosyte-seed/src/proto/: mod.rs  protosyte.core.v2.rs  protosyte.rs
protosyte-seed/src/tor_client/: mod.rs  tests.rs
protosyte-seed/tests/: end_to_end_tests.rs  integration_test.rs  integration_tests.rs
scripts/: README.md  ai-analyze.sh  build-all.sh  build-macos.sh  build-seed.sh  build-windows.sh  retrieval-session.sh  rig_destroy.sh  rig_start.sh  setup-env.sh  start-all.sh  stop-all.sh  test-all.sh  train-ner-model.sh  verify-dependencies.sh  vm-manage.sh
